--- a/Introduction to Cyber Security/README
+++ b/Introduction to Cyber Security/README
@@ -1,6 +1,7 @@
 #FROM TRYHACKME'S PAGE
 
-Introduction
+#Introduction
+
 Cyber Security is a huge topic, and it can be challenging to know where to start. 
 This path will give you a hands-on introduction to different areas within cyber, including:
 
@@ -11,18 +12,21 @@ Exploring security topics in the industry
 Completing this learning path will give you the knowledge to kick start your cyber journey.
 
 SECTION 1
-Introduction to Cyber Security
+#Introduction to Cyber Security
+
 Intro to Offensive Security
 Intro to Defensive Security
 Careers in Cyber
 
 SECTION 2
-Introduction to Offensive Security
+#Introduction to Offensive Security
+
 Web Application Security
 Operating System Security
 Network Security
 
 SECTION 3
-Introduction to Defensive Security
+#Introduction to Defensive Security
+
 Intro to Digital Forensics
 Security Operations
